# template

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: pylint.yml  python-app.yml
src/: pyproject.toml  template.py
src/unitests/: test_template.py
